plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly{
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//OpenAPI Generator]
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// Apache Commons Lang
	implementation 'org.apache.commons:commons-lang3:3.15.0'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j'

	// MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// APIサーバー(Tomcat)
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

	// SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'

	// H2(InMemoryDB)
	testImplementation 'com.h2database:h2:2.3.232'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
